libs/@local/hashql/ast/tests/ui/lowering/special-form-expander/is-1.jsonc
//@ run: fail
//@ description: is/1 should error out
["::kernel::special_form::is", { "#literal": true }]
//~^ ERROR Add missing arguments
